--- a/MC.css
+++ b/MC.css
@@ -46,6 +46,7 @@
     margin: 0;
     vertical-align: top;
     width: 10em;
+
 }
 
 #botonCFK{
@@ -55,6 +56,7 @@
     height: 10em;  
     width: 10em;
     border: 4px solid #33bbff;
+    cursor: pointer;
 
 }
 
@@ -76,6 +78,7 @@
     margin: 0;
     vertical-align: top;
     width: 10em;
+    cursor: pointer;
 }
 
 #botonMM{
